--- a/gallery.html
+++ b/gallery.html
@@ -120,13 +120,13 @@
             <br>
             <div class="owl-carousel">
               <div class="item">
-                <img src="images/gallery/saeadc2019/1.jpg">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506015/Aerounwired/gallery/saeadc2019/1_rxnyq6.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/saeadc2019/2.jpg">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506015/Aerounwired/gallery/saeadc2019/2_qcpp3l.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/saeadc2019/3.jpg">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506015/Aerounwired/gallery/saeadc2019/3_xts17w.jpg">
               </div>
             </div>
           </div>
@@ -141,34 +141,34 @@
             <br>
             <div class="owl-carousel">
               <div class="item">
-                <img src="images/gallery/pretathva2018/1.jpg">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506065/Aerounwired/gallery/pretathva2018/1_ggkbii.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2018/2.jpg">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506065/Aerounwired/gallery/pretathva2018/2_cuyct5.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2018/3.jpg">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506065/Aerounwired/gallery/pretathva2018/3_uw6rpp.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2018/4.jpg">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506066/Aerounwired/gallery/pretathva2018/4_b6bd3l.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2018/5.jpg">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506066/Aerounwired/gallery/pretathva2018/5_mxgmx9.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2018/6.jpg">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506067/Aerounwired/gallery/pretathva2018/6_mykkrm.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2018/7.jpg">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506067/Aerounwired/gallery/pretathva2018/7_flcvqp.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2018/8.jpg">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506065/Aerounwired/gallery/pretathva2018/8_sjkc0z.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2018/9.jpg">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506065/Aerounwired/gallery/pretathva2018/9_wuhxjw.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2018/10.jpg">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506065/Aerounwired/gallery/pretathva2018/10_grudpn.jpg">
               </div>
 
             </div>
@@ -187,16 +187,16 @@
             <br>
             <div class="owl-carousel">
               <div class="item">
-                <img src="images/gallery/saeadc2017/1.jpg">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506075/Aerounwired/gallery/saeadc2017/1_oowdvd.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/saeadc2017/2.jpg">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506075/Aerounwired/gallery/saeadc2017/2_nvs8pm.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/saeadc2017/3.jpg">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506075/Aerounwired/gallery/saeadc2017/3_pegm8u.jpg">
               </div>
               <div class="item">
-                <img  src="images/gallery/saeadc2017/4.jpg">
+                <img  src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506075/Aerounwired/gallery/saeadc2017/4_c3xngi.jpg">
               </div>
             </div>
           </div>
@@ -211,31 +211,31 @@
             <br>
             <div class="owl-carousel">
               <div class="item">
-                <img src="images/gallery/pretathva2017/1.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506053/Aerounwired/gallery/pretathva2017/1_eohiie.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2017/2.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506053/Aerounwired/gallery/pretathva2017/2_vctb9i.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2017/3.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506054/Aerounwired/gallery/pretathva2017/3_qhymqv.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2017/4.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506054/Aerounwired/gallery/pretathva2017/4_divu84.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2017/5.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506055/Aerounwired/gallery/pretathva2017/5_s3yr5l.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2017/6.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506055/Aerounwired/gallery/pretathva2017/6_o6fbep.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2017/7.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506055/Aerounwired/gallery/pretathva2017/7_dfwccq.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2017/8.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506053/Aerounwired/gallery/pretathva2017/8_j99gv1.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2017/9.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506053/Aerounwired/gallery/pretathva2017/9_xz2fed.jpg">
               </div>
             </div>
           </div>
@@ -251,37 +251,37 @@
             <br>
             <div class="owl-carousel">
               <div class="item">
-                <img src="images/gallery/pretathva2016/1.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506043/Aerounwired/gallery/pretathva2016/1_esxy03.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2016/2.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506044/Aerounwired/gallery/pretathva2016/2_obnitl.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2016/3.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506044/Aerounwired/gallery/pretathva2016/3_yfjxpr.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2016/4.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506046/Aerounwired/gallery/pretathva2016/4_mmabrv.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2016/5.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506045/Aerounwired/gallery/pretathva2016/5_ooayj0.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2016/6.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506046/Aerounwired/gallery/pretathva2016/6_k8rowv.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2016/7.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506045/Aerounwired/gallery/pretathva2016/7_kxxspc.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2016/8.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506045/Aerounwired/gallery/pretathva2016/8_qoqvo2.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2016/9.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506043/Aerounwired/gallery/pretathva2016/9_kiifut.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2016/10.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506044/Aerounwired/gallery/pretathva2016/10_mi7lav.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2016/11.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506044/Aerounwired/gallery/pretathva2016/11_fwjowr.jpg">
               </div>
             </div>
           </div>
@@ -296,19 +296,22 @@
             <br>
             <div class="owl-carousel">
               <div class="item">
-                <img src="images/gallery/pretathva2015/1.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506033/Aerounwired/gallery/pretathva2015/1_hukxel.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2015/2.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506034/Aerounwired/gallery/pretathva2015/2_lmgvdq.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2015/3.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506034/Aerounwired/gallery/pretathva2015/3_wzqj4a.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2015/4.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506034/Aerounwired/gallery/pretathva2015/4_ww6onb.jpg">
               </div>
               <div class="item">
-                <img src="images/gallery/pretathva2015/5.JPG">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506034/Aerounwired/gallery/pretathva2015/5_zbitju.jpg">
+              </div>
+              <div class="item">
+                <img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583506034/Aerounwired/gallery/pretathva2015/6_mg2wpd.jpg" alt=""> 
               </div>
 
 
