--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<span class="icon-bar"></span>
 							</button>
 							<div style="margin-left: 30px ">
-								<img class="logo1" src="images/aelogo.jpg">
+								<img class="logo1" src="https://res.cloudinary.com/di67pwwso/image/upload/v1583505607/Aerounwired/aelogo_rgfjei.jpg">
 							</div>
 						</div>
 
@@ -125,7 +125,7 @@
 							<div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms"
 								data-wow-delay="300ms">
 								<a href="project.html#drone" title="View project Drone"><i class="fa "><img width="50px"
-											height="50px" src="images/projects/drone.png"></i></a>
+											height="50px" src="https://res.cloudinary.com/di67pwwso/image/upload/v1583505853/Aerounwired/projects/drone21_xg2exr.jpg"></i></a>
 								<h2>Drone</h2>
 								<p>Surveillance</p>
 							</div>
@@ -134,7 +134,7 @@
 							<div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms"
 								data-wow-delay="600ms">
 								<a href="project.html#tv" title="View project thrust vectoring"><i class="fa "><img
-											width="50px" height="50px" src="images/projects/thrust.png"></i></a>
+											width="50px" height="50px" src="https://res.cloudinary.com/di67pwwso/image/upload/v1583505855/Aerounwired/projects/thrust_mfr3bh.png"></i></a>
 								<h2>Thrust Vectoring</h2>
 								<p>Efficient manuverability</p>
 							</div>
@@ -143,7 +143,7 @@
 							<div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms"
 								data-wow-delay="900ms">
 								<a href="project.html#fin" title="View project Rocket Aerodynamics"><i class="fa"><img
-											width="50px" height="50px" src="images/projects/rocket.png"></i></a>
+											width="50px" height="50px" src="https://res.cloudinary.com/di67pwwso/image/upload/v1583505855/Aerounwired/projects/rocket_qyoyly.png"></i></a>
 								<h2>Rocket Aerodynamics</h2>
 								<p>Fin Stabilization</p>
 							</div>
@@ -152,7 +152,7 @@
 							<div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms"
 								data-wow-delay="1200ms">
 								<a href="project.html#vtol" title="View project vtol"><i class="fa"><img width="50px"
-											height="50px" src="images/projects/vtol.png"></i></a>
+											height="50px" src="https://res.cloudinary.com/di67pwwso/image/upload/v1583505852/Aerounwired/projects/vtol_meu1bf.png"></i></a>
 								<h2>VTOL</h2>
 								<p>Faster Take-Off And Landing</p>
 							</div>
@@ -161,7 +161,7 @@
 						<div class="col-md-3">
 							<div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms"
 								data-wow-delay="1500ms">
-								<i class="fa"><img width="50px" height="50px" src="images/projects/hovercraft.png"></i>
+								<i class="fa"><img width="50px" height="50px" src="https://res.cloudinary.com/di67pwwso/image/upload/v1583505856/Aerounwired/projects/hovercraft_tbvgvn.png"></i>
 								<h2>Hovercraft</h2>
 								<p>Hover in style</p>
 							</div>
@@ -170,7 +170,7 @@
 						<div class="col-md-3">
 							<div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms"
 								data-wow-delay="1800ms">
-								<i class="fa"><img width="50px" height="50px" src="images/projects/ornithopter.png"></i>
+								<i class="fa"><img width="50px" height="50px" src="https://res.cloudinary.com/di67pwwso/image/upload/v1583505854/Aerounwired/projects/ornithopter_vpqgxa.png"></i>
 								<h2>Ornithopter</h2>
 								<p>Nature's Gifts</p>
 							</div>
@@ -188,7 +188,7 @@
 						<div class="col-md-3">
 							<div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms"
 								data-wow-delay="2400ms">
-								<i class="fa"><img width="50px" height="50px" src="images/projects/autogyro.png"></i>
+								<i class="fa"><img width="50px" height="50px" src="https://res.cloudinary.com/di67pwwso/image/upload/v1583505855/Aerounwired/projects/autogyro_msgsaz.png"></i>
 								<h2>Autogyros</h2>
 								<p>Brilliance in Conceptual Designx</p>
 							</div>
@@ -243,7 +243,7 @@
 				</div>
 
 				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-					<img src="images/updates/Pretathva_workshop.jpg" class="img-responsive " id="1"
+					<img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583572329/Aerounwired/updates/Pretathva_workshop_ohe960.jpg" class="img-responsive " id="1"
 						onclick="on1(this)" />
 					<h3>Pre Tathva Workshop 2k19</h3>
 
@@ -251,7 +251,7 @@
 
 				<div id="displayy" onclick="off1(this)">
 
-					<img class="ppp" src="images/updates/Pretathva_workshop.jpg" />
+					<img class="ppp" src="https://res.cloudinary.com/di67pwwso/image/upload/v1583572329/Aerounwired/updates/Pretathva_workshop_ohe960.jpg" />
 					<p class="para">
 						<span class="head1" style="margin-top: 0px">Pretathva Workshop</span></br>
 
@@ -281,12 +281,12 @@ Exclusively for first years.<br>
 				</div>
 
 				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-					<img src="images/updates/stall.jpg" class="img-responsive" id="2" onclick="on1(this)" />
+					<img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583505766/Aerounwired/updates/stall_qpbowg.jpg" class="img-responsive" id="2" onclick="on1(this)" />
 					<h3>Tathva 2019 stall</h3>
 				</div>
 				<div id="displayy1" onclick="off1(this)">
 
-					<img class="ppp" src="images/updates/stall.jpg" />
+					<img class="ppp" src="https://res.cloudinary.com/di67pwwso/image/upload/v1583505766/Aerounwired/updates/stall_qpbowg.jpg" />
 					<p class="para">
 						<span class="head1">Tathva Stall 2019</span></br>
 
@@ -296,13 +296,13 @@ Exclusively for first years.<br>
 				</div>
 
 				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="100ms">
-					<img src="images/updates/Albatross.jpg" class="img-responsive" id="3" onclick="on1(this)" />
+					<img src="https://res.cloudinary.com/di67pwwso/image/upload/v1583505766/Aerounwired/updates/Albatross_qokved.jpg" class="img-responsive" id="3" onclick="on1(this)" />
 					<h3>Albatross</h3>
 
 				</div>
 				<div id="displayy2" onclick="off1(this)">
 
-					<img class="ppp" src="images/updates/Albatross.jpg" />
+					<img class="ppp" src="https://res.cloudinary.com/di67pwwso/image/upload/v1583505766/Aerounwired/updates/Albatross_qokved.jpg" />
 					<p class="para">
 						<span class="head1">Albatross 2019</span></br>
 						More information will be updated soon
@@ -325,7 +325,7 @@ Exclusively for first years.<br>
 						<li style="min-height: 200px;min-width: 200px;display: inline-block"> <a
 								href="http://www.glorodavionics.com/"><img class="img-responsive wow fadeInDown"
 									data-wow-duration="1000ms" data-wow-delay="300ms"
-									src="images/partners/logo3.png"></a>
+									src="https://res.cloudinary.com/di67pwwso/image/upload/v1583505879/Aerounwired/partners/logo3_avcom7.png"></a>
 						</li>
 						<!--increase data wow delay for each sponser-->
 					</ul>
